--- a/view/pages/CropManagementFrame.html
+++ b/view/pages/CropManagementFrame.html
@@ -53,7 +53,7 @@
         class="z-[1000] fixed inset-0 hidden opacity-0 bg-opacity-50 flex justify-center items-center transition-opacity duration-300 ease-out"
       >
         <div
-          class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
+          class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[50vw] mr-[20vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
         >
           <!-- Modal Header -->
           <h1 class="text-center text-xl font-semibold mb-5">Add Crop</h1>
@@ -150,7 +150,7 @@
 
             <!-- File Uploads in a single row -->
             <div class="mt-10">
-              <div>
+              <div  id="file-upload">
                 <label
                   for="crop-image"
                   class="flex flex-col items-center justify-center bg-gray-300 p-10 rounded-2xl border-2 border-dashed border-gray-500 shadow-xl cursor-pointer hover:bg-gray-200 transition-all"
@@ -174,12 +174,15 @@
                     accept="image/*"
                     class="hidden"
                   />
-                </label>
-                <p
-                  id="file-info"
-                  class="mt-4 text-gray-700 text-sm hidden"
-                ></p>
+                </label>  
+     
               </div>
+            
+              <img
+              id="crop-preview"
+              alt="crop-preview"
+              class="hidden rounded-lg shadow-xl object-cover w-full h-[36vh]"
+            />
 
             </div>
 
@@ -214,7 +217,7 @@
         class="z-[1000] fixed inset-0 hidden opacity-0 bg-opacity-50 flex justify-center items-center transition-opacity duration-300 ease-out"
       >
         <div
-          class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[60vw] mr-[18vw] mb-[5vh] transform scale-95 transition-transform duration-300 ease-out"
+          class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[50vw] mr-[18vw] mb-[5vh] transform scale-95 transition-transform duration-300 ease-out"
         >
           <h1 class="text-center text-xl font-semibold mb-5">
             View Crop Details
@@ -310,9 +313,9 @@
               class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-gray-900 outline outline-2 outline-gray-300 focus:outline-green-600"
             >
               <option value="" disabled selected>Select Field</option>
-              <option value="staff1">Field 1</option>
-              <option value="staff2">Field 2</option>
-              <option value="staff3">Field 3</option>
+              <option value="field1">Field 1</option>
+              <option value="field2">Field 2</option>
+              <option value="field3">Field 3</option>
             </select>
           
           </div>
