--- a/view/pages/CropManagementFrame.html
+++ b/view/pages/CropManagementFrame.html
@@ -70,7 +70,6 @@
         </div>
       </div>
       
-      
     
 
       <!-- add crop modal  -->
@@ -241,7 +240,7 @@
       <!-- View Crop Modal -->
       <div
         id="view-crop-modal"
-        class="z-[1000] fixed inset-0 hidden opacity-0 bg-opacity-50 flex justify-center items-center transition-opacity duration-300 ease-out"
+        class=" z-[1000] fixed inset-0 hidden opacity-0 bg-opacity-50 flex justify-center items-center transition-opacity duration-300 ease-out"
       >
         <div
           class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[50vw] mr-[18vw] mb-[5vh] transform scale-95 transition-transform duration-300 ease-out"
@@ -249,6 +248,8 @@
           <h1 class="text-center text-xl font-semibold mb-5">
             View Crop Details
           </h1>
+
+          <div class="overflow-y-auto h-[64vh] p-4">
 
           <div class="flex justify-center items-center mb-6">
             <img
@@ -346,6 +347,47 @@
             </select>
           
           </div>
+
+          
+          <div class="mt-10">
+            <div  id="update-file-upload">
+              <label
+                for="update-crop-image"
+                class="flex flex-col items-center justify-center bg-gray-300 p-10 rounded-2xl border-2 border-dashed border-gray-500 shadow-xl cursor-pointer hover:bg-gray-200 transition-all"
+              >
+                <svg class="h-12 mb-4 fill-green-600" viewBox="0 0 640 512">
+                  <path
+                    d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-217c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l39-39V392c0 13.3 10.7 24 24 24s24-10.7 24-24V257.9l39 39c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-80-80c-9.4-9.4-24.6-9.4-33.9 0l-80 80z"
+                  ></path>
+                </svg>
+                <p class="text-gray-700 text-lg font-semibold">
+                  Drag and Drop
+                </p>
+                <p class="text-gray-600">or</p>
+                <span
+                  class="bg-green-600 text-white px-5 py-2 rounded-lg mt-2 hover:bg-green-700 transition-all"
+                  >Browse Image</span
+                >
+                <input
+                  id="update-crop-image"
+                  type="file"
+                  accept="image/*"
+                  class="hidden"
+                />
+              </label>  
+   
+            </div>
+          
+            <img
+            id="update-crop-preview"
+            alt="crop-preview"
+            class="hidden rounded-lg shadow-xl object-cover w-full h-[36vh]"
+          />  
+
+          </div>
+
+          </div>
+
 
           <!-- Buttons Section -->
           <div
