--- a/view/pages/LogManagementFrame.html
+++ b/view/pages/LogManagementFrame.html
@@ -209,112 +209,138 @@
         </div>
       </div>
 
-      <!-- View Crop Modal -->
+      <!-- View Log Modal -->
       <div
-        id="view-crop-modal"
+        id="view-log-modal"
         class="z-[1000] fixed inset-0 hidden opacity-0 bg-opacity-50 flex justify-center items-center transition-opacity duration-300 ease-out"
       >
-        <div
-          class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[50vw] mr-[18vw] mb-[5vh] transform scale-95 transition-transform duration-300 ease-out"
-        >
-          <h1 class="text-center text-xl font-semibold mb-5">
-            View Crop Details
-          </h1>
+      <div
+      class="popup-modal bg-white rounded-lg p-8 w-full drop- adow-2xl sm:w-[50vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
+    >
+      <!-- Modal Header -->
+      <h1 class="text-center text-xl font-semibold mb-5">View Log Details</h1>
 
-          <div class="flex justify-center items-center mb-6">
-            <img
-              id="view-crop-image"
-              class="h-auto w-[100vw] object-cover md:h-[36vh] rounded-lg"
-              src=""
-              alt="Crop Image"
-            />
-          </div>
+      <!-- Modal Body -->
+      <div class="overflow-y-auto h-[60vh] p-4">
 
-          <div class="grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-            <div class="sm:col-span-3">
-              <label
-                for="first-name"
-                class="block text-sm font-medium text-gray-900"
-                >Common Name</label
-              >
-              <div class="mt-2">
-                <input
-                  type="text"
-                  name="first-name"
-                  id="view-common-name"
-                  required
-                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
-                />
-              </div>
-            </div>
-            <div class="sm:col-span-3">
-              <label
-                for="last-name"
-                class="block text-sm font-medium text-gray-900"
-                >Scientific Name</label
-              >
-              <div class="mt-2">
-                <input
-                  type="text"
-                  name="last-name"
-                  id="view-scientific-name"
-                  required
-                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-5">
-            <div class="sm:col-span-3">
-              <label
-                for="first-name"
-                class="block text-sm font-medium text-gray-900"
-                >Crop Category</label
-              >
-              <div class="mt-2">
-                <input
-                  type="text"
-                  name="first-name"
-                  id="view-category"
-                  required
-                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
-                />
-              </div>
-            </div>
-            <div class="sm:col-span-3">
-              <label
-                for="last-name"
-                class="block text-sm font-medium text-gray-900"
-                >Crop Season</label
-              >
-              <div class="mt-2">
-                <input
-                  type="text"
-                  name="last-name"
-                  id="view-crop-season"
-                  required
-                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
-                />
-              </div>
-            </div>
-          </div>
+        <!-- observed image  -->
+        <div class="flex justify-center items-center mb-6">
+          <img
+              id="view-log-image"
+            class="h-auto w-[100vw] object-cover md:h-[36vh]  rounded-lg"
+            src=""  
+            alt="Log Image"
+          />
+        </div>
 
-          <div class="mt-5">
+        <!-- Allocated Fields -->
+        <div class="mb-6">
+          <label
+            for="field-dropdown"
+            class="block text-sm font-medium text-gray-900"
+            >Allocated Field</label
+          >
+          <select
+            id="view-field-dropdown"
+            class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-gray-900 outline outline-2 outline-gray-300 focus:outline-green-600"
+          >
+            <option value="field1">Field 1</option>
+            <option value="field2">Field 2</option>
+            <option value="field3">Field 3</option>
+          </select>
+          <div id="view-selected-field" class="flex flex-wrap gap-2 mt-4"></div>
+        </div>
+
+        <!-- Allocated Crops -->
+
+        <div class="mb-6">
+          <label
+            for="view-crop-dropdown"
+            class="block text-sm font-medium text-gray-900"
+            >Allocated Crops</label
+          >
+          <select
+            id="view-crop-dropdown"
+            class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-gray-900 outline outline-2 outline-gray-300 focus:outline-green-600"
+          >
+            <option value="crop1">Crop 1</option>
+            <option value="crop2">Crop 2</option>
+            <option value="crop3">Crop 3</option>
+          </select>
+          <div id="view-selected-crop" class="flex flex-wrap gap-2 mt-4"></div>
+        </div>
+
+        <!-- Allocated Staff -->
+
+        <div class="mb-6">
+          <label
+            for="staff-dropdown"
+            class="block text-sm font-medium text-gray-900"
+            >Allocated Staff</label
+          >
+          <select
+            id="view-staff-dropdown"
+            class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-gray-900 outline outline-2 outline-gray-300 focus:outline-green-600"
+          >
+            <option value="staff1">Staff 1</option>
+            <option value="staff2">Staff 2</option>
+            <option value="staff3">Staff 3</option>
+          </select>
+          <div id="view-selected-staff" class="flex flex-wrap gap-2 mt-4"></div>
+        </div>
+
+        <!-- Remarks -->
+        <div class="mb-6">
+          <label
+            for="observation"
+            class="block text-sm font-medium text-gray-900"
+          >
+            Observation
+          </label>
+          <textarea
+            name="observation"
+            id="view-observation"
+            rows="4"
+            class="mt-2 block h-[20vh] w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+          ></textarea>
+        </div>
+
+        <div class="mb-6">
+          <div id="update-file-upload">
             <label
-              for="staff-dropdown"
-              class="block text-sm font-medium text-gray-900"
-              >Allocated Fields</label
+              for="update-log-image"
+              class="flex flex-col items-center justify-center bg-gray-300 p-10 rounded-2xl border-2 border-dashed border-gray-500 shadow-xl cursor-pointer hover:bg-gray-200 transition-all"
             >
-            <select
-              id="view-field-dropdown"
-              class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-gray-900 outline outline-2 outline-gray-300 focus:outline-green-600"
-            >
-              <option value="" disabled selected>Select Field</option>
-              <option value="field1">Field 1</option>
-              <option value="field2">Field 2</option>
-              <option value="field3">Field 3</option>
-            </select>
+              <svg class="h-12 mb-4 fill-green-600" viewBox="0 0 640 512">
+                <path
+                  d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-217c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l39-39V392c0 13.3 10.7 24 24 24s24-10.7 24-24V257.9l39 39c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-80-80c-9.4-9.4-24.6-9.4-33.9 0l-80 80z"
+                ></path>
+              </svg>
+              <p class="text-gray-700 text-lg font-semibold">
+                Drag and Drop
+              </p>
+              <p class="text-gray-600">or</p>
+              <span
+                class="bg-green-600 text-white px-5 py-2 rounded-lg mt-2 hover:bg-green-700 transition-all"
+                >Browse Image</span
+              >
+              <input
+                id="update-log-image"
+                type="file"
+                accept="image/*"
+                class="hidden"
+              />
+            </label>
           </div>
+
+          <img
+            id="update-log-preview"
+            alt="log-preview"
+            class="hidden rounded-lg shadow-xl object-cover w-full h-[36vh]"
+          />
+        </div>
+
+      </div>
 
           <!-- Buttons Section -->
           <div
@@ -333,7 +359,7 @@
               Delete
             </button>
             <button
-              id="view-crop-close"
+              id="view-log-close"
               class="bg-gray-300 w-full rounded-lg py-2 text-black hover:bg-gray-400 focus:outline-none"
             >
               Cancel
