--- a/view/pages/SettingsFrame.html
+++ b/view/pages/SettingsFrame.html
@@ -76,11 +76,11 @@
               <div>
                 <div class="mb-4">
                   <label for="currentEmail" class="block text-sm mb-2"
-                    >Current Email</label
+                    >Current Password</label
                   >
                   <input
                     type="password"
-                    id="currentPassword`"
+                    id="deleteCurrentPassword"
                     name="currentPassword"
                     class="w-full p-2 border border-gray-300 rounded-lg"
                   />
@@ -145,6 +145,63 @@
         </div>
       </div>
     </div>
+
+     <!-- delete account modal  -->
+     <div
+     id="delete-account-modal"
+     class="fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opacity-0 transition-opacity duration-300 ease-out"
+   >
+     <div
+       class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[30vw] mr-[18vw] mb-[15vh] transform scale-95 transition-transform duration-300 ease-out"
+     >
+       <!-- Modal Header -->
+       <h1 class="text-center text-xl font-bold mb-4 text-gray-800">
+         Are you sure?
+       </h1>
+
+       <!-- Modal Body -->
+       <div class="text-center p-4">
+         <svg
+           fill="currentColor"
+           viewBox="0 0 20 20"
+           class="group-hover:animate-bounce w-16 h-16 flex items-center justify-center text-red-500 mx-auto mb-8"
+         >
+           <path
+             clip-rule="evenodd"
+             d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+             fill-rule="evenodd"
+           ></path>
+         </svg>
+         <p class="font-medium text-sm text-gray-600 px-4">
+           Are you sure you want to delete your account?
+           This action cannot be undone.
+         </p>
+       </div>
+
+       <!-- Buttons Section -->
+       <div class="mt-8 grid grid-cols-1 gap-4 sm:grid-cols-2">
+         <!-- Delete Button -->
+         <div>
+           <button
+             id="btn-delete-account"
+             class="w-full bg-red-600 rounded-lg py-2 px-4 text-white hover:bg-red-700 focus:outline-none transition duration-300"
+           >
+             Delete
+           </button>
+         </div>
+         <!-- Cancel Button -->
+         <div>
+           <button
+             id="close-delete-modal"
+             class="w-full bg-gray-300 rounded-lg py-2 px-4 text-black hover:bg-gray-400 focus:outline-none transition duration-300"
+           >
+             Cancel
+           </button>
+         </div>
+       </div>
+     </div>
+   </div>
+
 
     <script
       type="text/javascript"
