--- a/view/pages/HomeFrame.html
+++ b/view/pages/HomeFrame.html
@@ -33,8 +33,8 @@
         <div
           class="flex items-center bg-gray-200 text-gray-800 px-4 py-2 rounded-lg"
         >
-          <span class="mr-2" id="weather-emoji">☀️</span>
-          <p id="weather-txt">Fetching weather...</p>
+          <span class="mr-2 text-2xl" id="weather-emoji">☀️</span>
+          <p id="weather-txt" class="font-medium">Fetching weather...</p>
         </div>
       </header>
 
