--- a/view/pages/StaffManagementFrame.html
+++ b/view/pages/StaffManagementFrame.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="../../assets/css/general.css" />
     <script src="../../assets/js/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body class="bg-gray-50 poppins-regular">
@@ -1020,7 +1021,7 @@
     </div>
   </div>
   
-
+  <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script
       type="module"
       src="../../controller/StaffFormController.js"
